syntax = "proto3";

package occurrences.v1;

import "google/protobuf/timestamp.proto";

enum OccurrenceType {
  OCCURRENCE_TYPE_NEW_ACCOUNT = 0;
  OCCURRENCE_TYPE_NEW_POST = 1;
  OCCURRENCE_TYPE_NEW_LIKE = 2;
}

message CreateOccurrenceRequest {
  OccurrenceType occurrence_code = 1;
  google.protobuf.Timestamp occurrence_time = 2;
  string actor_id = 3;
  string actor_type = 4;
  string source_id = 5;
  string source_type = 6;
}

message CreateOccurrenceResponse { string occurrence_id = 1; }

message ListUserOccurrencesResponse { repeated Occurrence occurrences = 1; }

message ListUserOccurrencesRequest {
  string actor_id = 1;
  string source_type = 2;
  uint32 skip = 3;
  uint32 limit = 4;
}

message Occurrence {
  string occurrence_id = 1;
  OccurrenceType occurrence_code = 2;
  string actor_id = 3;
  string actor_type = 4;
  string source_id = 5;
  string source_type = 6;
  google.protobuf.Timestamp occurrence_time = 7;
}

service OccurrenceService {
  rpc CreateOccurrence(CreateOccurrenceRequest)
      returns (CreateOccurrenceResponse);
  rpc ListUserOccurrences(ListUserOccurrencesRequest)
      returns (ListUserOccurrencesResponse);
}
